components/hac-fe-config/deployment-template/chrome-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: chrome 
spec:
  port:
    targetPort: public
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: chrome
    weight: 100
