components/hac-fe-config/deployment-template/inventory-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: inventory 
spec:
  port:
    targetPort: public
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: inventory
    weight: 100
